--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,15 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node,puppet
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,puppet
 
+#json
+cookies.json*
+livetoken.json*
+nbatopshot.json*
+
+#tmp
+tmp/
+
+
 ### Node ###
 # Logs
 logs
